--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@georstat/react-native-image-cache": "^3.1.0",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/geolocation": "^3.3.0",
@@ -31,14 +32,18 @@
     "react": "18.2.0",
     "react-i18next": "^15.0.1",
     "react-native": "0.73.0",
+    "react-native-file-access": "^3.1.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-maps": "^1.14.0",
+    "react-native-otp-entry": "^1.7.1",
+    "react-native-pager-view": "^6.3.4",
     "react-native-reanimated": "^3.15.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
     "react-native-svg": "^15.5.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
