--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.73.0",
     "react-native-file-access": "^3.1.0",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-image-crop-picker": "^0.41.2",
     "react-native-maps": "^1.14.0",
     "react-native-otp-entry": "^1.7.1",
     "react-native-pager-view": "^6.3.4",
