--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,7 +30,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'nothing' do
+target 'TheSneakers' do
   config = use_native_modules!
 
   use_react_native!(
@@ -44,7 +44,7 @@ target 'nothing' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'nothingTests' do
+  target 'TheSneakersTests' do
     inherit! :complete
     # Pods for testing
   end
