--- a/ios/TheSneakersTests/Info.plist
+++ b/ios/TheSneakersTests/Info.plist
@@ -20,5 +20,7 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+  	<string>App needs access to your photo library to allow you to upload your photos.</string>
 </dict>
 </plist>
