--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/netinfo": "^11.3.2",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
