--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator='IPhoneXR'",
-    "ioss": "react-native run-ios --simulator='iPhone 13 Pro Max'",
-    "iosss": "react-native run-ios --simulator='iPhone 8'",
+    "ios": "react-native run-ios --simulator='iPhone 13 mini'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
